tests/new_env_jsx_pragma/new_env_jsx_pragma.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:9

Cannot resolve name `call`. [cannot-resolve-name]

   3|  * @jsx call()
              ^^^^



Found 1 error
